--- a/public/css/app.css
+++ b/public/css/app.css
@@ -58,3 +58,78 @@
   background-position: center;
 }
 
+.sfondo {
+  background-color: #3f3f3f;
+}
+
+.sfondo .container {
+  margin: 0 auto;
+  width: 70%;
+}
+
+.sfondo .container .fila {
+  display: flex;
+  justify-content: space-around;
+}
+
+.sfondo .container .fila .fumetto {
+  margin: 20px 20px;
+  height: 200px;
+  width: 200px;
+}
+
+.sfondo .container .fila .fumetto img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.sfondo .container .fila .fumetto P {
+  color: white;
+  font-size: 15px;
+}
+
+.sfondo .container .btn {
+  display: flex;
+  justify-content: center;
+}
+
+.sfondo .container .btn button {
+  background-color: #0175e2;
+  color: white;
+  font-size: 20px;
+  border: none;
+  margin: 50px 0 20px 0;
+  padding: 15px 50px;
+  cursor: pointer;
+}
+
+.blueLink {
+  background-color: #0084ff;
+}
+
+.blueLink .linkShop {
+  margin: 0 auto;
+  width: 70%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.blueLink .imgLink {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.blueLink .imgLink P {
+  margin-left: 10px;
+  color: white;
+}
+
+.blueLink .imgLink img {
+  margin: 50px 0;
+  width: 80px;
+  background-color: white;
+}
+
