--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -55,3 +55,69 @@
     background-size: cover;
     background-position: center;
 }
+
+.sfondo{
+    background-color: rgb(63, 63, 63);
+    .container{
+        margin: 0 auto;
+        width: 70%;
+        .fila{
+            display: flex;
+            justify-content: space-around;
+            .fumetto{
+                margin: 20px 20px;
+                height: 200px;
+                width: 200px;
+                img{
+                    object-fit: cover;
+                    width: 100%;
+                    height: 100%;
+                }
+                P{
+                    color: white;
+                    font-size: 15px;
+                }
+            }
+        }
+
+        .btn{
+            display: flex;
+            justify-content: center;
+            button{
+                background-color: rgb(1, 117, 226);
+                color: white;
+                font-size: 20px;
+                border: none;
+                margin: 50px 0 20px 0;
+                padding: 15px 50px;
+                cursor: pointer;
+            }
+        }
+    }
+}
+
+.blueLink{
+    background-color: rgb(0, 132, 255);
+    
+    .linkShop{
+        margin: 0 auto;
+        width: 70%;
+        display: flex;
+        justify-content: space-around;
+    }
+    .imgLink{
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        P{
+            margin-left: 10px;
+            color: white;
+        }
+        img{
+            margin: 50px 0;
+            width: 80px;
+            background-color: white;
+        }
+    }
+}
+
